tests/regression/error/hw5_error03.nex
var x;
  fun j(b)
  {
  }
   x = j(true > 3);
